--- a/.github/workflows/update-flake.yml
+++ b/.github/workflows/update-flake.yml
@@ -1,25 +1,34 @@
 name: Update Flake Lock
 
 on:
-  workflow_dispatch:  # Manual triggers
+  workflow_dispatch:
   push:
-    branches: [main]  # Runs on every push to main
+    branches: [main]
 
 jobs:
   update-and-verify:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Required to commit changes
+      contents: write
+      id-token: write  # Required for Magic Nix Cache
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Required for git diff
-          token: ${{ secrets.GITHUB_TOKEN }}  # Needed for push
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Nix with flakes
         uses: DeterminateSystems/nix-installer-action@v3
+
+      # Speed boost 1: Magic Nix Cache (reduces build times by 30-50%)
+      - name: Setup Magic Nix Cache
+        uses: DeterminateSystems/magic-nix-cache-action@main
+
+      # Speed boost 2: FlakeHub cache (pre-caches common dependencies)
+      - name: Setup FlakeHub cache
+        uses: DeterminateSystems/flakehub-cache-action@main
 
       - name: Update flake inputs
         run: nix flake update
@@ -28,11 +37,10 @@ jobs:
         run: nix flake check
 
       - name: Commit and push changes
-        if: success()  # Only run if previous steps succeeded
+        if: success()
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add flake.lock
-          # Only commit if lock file changed
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update flake.lock" && git push)
+          git diff --quiet || (git commit -m "Update flake.lock" && git push)
 
